welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: not found: type Bool
var b:Bool=true;
      ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
	while (b) {
        ^