welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
var b:Bool=true;
	while (b) {
		avance();
		if (getCouleurSol()==Color.green) {
			recule();
			return true;
		}
		if (estFaceMur()) {
			recule();
			gauche();
		}
		if (estSurBiscuit()) {
			return true;
		}
	}
}        
